--- a/Ultimate Eyecandy/EyecandyX.csproj
+++ b/Ultimate Eyecandy/EyecandyX.csproj
@@ -62,6 +62,12 @@
     <Compile Include="GUI\PresetsPanel.cs" />
     <Compile Include="GUI\UIFastList.cs" />
     <Compile Include="GUI\UILutItem.cs" />
+    <Content Include="Locale\english.xml" />
+    <Compile Include="Locale\TranslationID.cs" />
+    <Compile Include="TranslationFramework\TranslationUtil.cs" />
+    <Compile Include="TranslationFramework\TranslatableAttribute.cs" />
+    <Compile Include="TranslationFramework\Translation.cs" />
+    <Compile Include="TranslationFramework\Language.cs" />
     <Compile Include="GUI\UIMainButton.cs" />
     <Compile Include="GUI\UIModalTitleBar.cs" />
     <Compile Include="GUI\UIPresetItem.cs" />
@@ -82,10 +88,15 @@
     <Compile Include="Fraction.cs" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="GUI\Assets\EXIcon.png" />
-    <EmbeddedResource Include="GUI\Assets\EXIconFocused.png" />
-    <EmbeddedResource Include="GUI\Assets\EXIconHovered.png" />
-    <EmbeddedResource Include="GUI\Assets\EXIconPressed.png" />
+    <EmbeddedResource Include="Assets\Icon.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Locale\english.xml">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Locale\TranslationID.cs">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
